--- a/app/views/user_mailer/send_daily_triage.md.erb
+++ b/app/views/user_mailer/send_daily_triage.md.erb
@@ -6,9 +6,13 @@ It's been [<%= @days %> days] since you've clicked on a codetriage.com link, let
 Here are some issues you should check out:
 
 <% @assignments.each do |assignment| %>
+<% if assignment.language_subscription_id%>
+##  <%= "For #{assignment.language_subscription.language} language"%>
+<% end %>
+
 ### <%= "##{assignment.issue.number}" if assignment.issue.number %> <%= link_to assignment.issue.title, issue_click_url(assignment.id, assignment.user.id ) %>
 
-<%= "[#{assignment.repo.full_name}](#{repo_url(assignment.repo)})" %>
+<%= "[#{assignment.issue.repo.full_name}](#{repo_url(assignment.issue.repo)})" %>
 <%= time_ago_in_words assignment.issue.last_touched_at %> ago
 
 - - -
