--- a/app/views/user_mailer/send_daily_triage.md.erb
+++ b/app/views/user_mailer/send_daily_triage.md.erb
@@ -3,7 +3,7 @@ Hello @<%= @user.github %>,
 <% if @days > @max_days %>
 It's been [<%= @days %> days] since you've clicked on a codetriage.com link, let's keep those issue counts down.
 <% end %>
-Here are some issues you should check out:
+<%= "Here are some issues you should check out:" if @assignments %>
 
 <% @assignments.each do |assignment| %>
 <% if assignment.language_subscription_id%>
@@ -17,6 +17,22 @@ Here are some issues you should check out:
 
 - - -
 
+<% end %>
+
+<%= "Here are some language specific issues" if @lang_assignments %>
+
+<% @lang_assignments.group_by(&:language_subscription).each do |lang, repos| %>
+## <%= lang.language %>
+
+<% repos.each do |a| %>
+### <%= "##{a.issue.number}" if a.issue.number %> <%= link_to a.issue.title, issue_click_url(a.id, a.user.id ) %>
+
+<%= "[#{a.issue.repo.full_name}](#{repo_url(a.issue.repo)})" %>
+<%= time_ago_in_words a.issue.last_touched_at %> ago
+
+- - -
+
+<% end %>
 <% end %>
 
 Go forth and make the world a better place
