--- a/app/views/repos/show.html.slim
+++ b/app/views/repos/show.html.slim
@@ -32,9 +32,8 @@ div class="subpage-content-wrapper #{ @repo.weight }"
     section.avatars.content-section
       h2.content-section-title
         = pluralize(@repo.subscribers.size, 'Subscriber'.pluralize())
-        a.repo-badge href="#{ repo_path(@repo) }"
+        a.repo-badge href="#" data-toggle="modal" data-target="#badgeModal"
           img src="#{ File.join(repo_path(@repo), "badges/users.svg?count=#{@repo.subscribers.size}") }" /
-
       ul.avatars-list
         = render 'subscribers/avatars', subscribers: @subscribers, show_names: false
 
@@ -58,3 +57,5 @@ div class="subpage-content-wrapper #{ @repo.weight }"
 
     - if @repo_sub.blank?
       = button_to "I Want to Triage #{@repo.path}", repo_subscriptions_path(repo_id: @repo.id), class: 'button full-width-action'
+
+= render partial: "badge_modal"
