--- a/app/views/application/_nav.html.slim
+++ b/app/views/application/_nav.html.slim
@@ -9,6 +9,7 @@ nav.application-navigation
       li.application-navigation-list-item= image_tag current_user.avatar_url, class: 'user-profile-image'
       li.application-navigation-list-item= link_to current_user.github, current_user
       li.application-navigation-list-item= link_to "Submit Repo", new_repo_path
+      li.application-navigation-list-item= link_to "Remove Repo", repos_remove_path
       li.application-navigation-list-item= link_to "Sign Out", destroy_user_session_path, method: :delete
     - else
       li.application-navigation-list-item= link_to 'Log in', user_omniauth_authorize_path(:github)
