--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -10,7 +10,7 @@
     .input-preprend
       span.add-on
         i.icon-envelope
-      = f.select :email_frequency, options_for_select( EmailRateLimit::USER_STATES.map {|value| [ value.humanize, value ] }, f.object.email_frequency), class: 'select'
+      = f.select :email_frequency, options_for_select( EmailFrequency::USER_FREQUENCIES.map {|value| [ value.humanize, value ] }, f.object.email_frequency), class: 'select'
       p When you're busy we try to send you less emails, if that's not good enough set your frequency here. For example if you set "twice a week" you won't receive more than 2 emails a week.
 
   = f.label :email_time_of_day, t("activerecord.attributes.user.email_time_of_day", default: "Email time of day"), class: "label label-info"
