style: improve user token delete page

--- a/app/assets/stylesheets/components/_hero.scss
+++ b/app/assets/stylesheets/components/_hero.scss
@@ -3,8 +3,12 @@
   padding-top: 4rem;
   text-align: center;
 
-  .button {
+  .button, .actions {
     margin-top: 3rem;
+  }
+
+  .actions * + * {
+    margin-left: 1rem;
   }
 
   .github-icon {
