--- a/app/views/users/token_delete.html.slim
+++ b/app/views/users/token_delete.html.slim
@@ -1,7 +1,8 @@
-.alert.alert-error
+.hero
   | Are you sure you want to delete your account and stop receiving triage emails at
-  strong= @user.email
+  strong<= @user.email
   | ?
-= form_for @user, url: token_delete_user_path(@user.account_delete_token), method: :delete, html_options: { class: "form form-horizontal" } do |f|
-  = f.submit "Yes, Delete My Account", class: "btn btn-danger"
-  = link_to "No, Cancel", root_url, class: "btn"
+  = form_for @user, url: token_delete_user_path(@user.account_delete_token), method: :delete, html_options: { class: "form form-horizontal" } do |f|
+    .actions
+      = f.submit "Yes, Delete My Account", class: "btn btn-danger"
+      = link_to "No, Cancel", root_url, class: "btn"
