--- a/app/views/user_mailer/poke_inactive.text.erb
+++ b/app/views/user_mailer/poke_inactive.text.erb
@@ -13,11 +13,11 @@ Help a repo in need:
 Help a random repo:
 <%= @random_repo.full_name %> (<%= repo_url(@random_repo) %>)
 
-If you don't like any of those add your own repo (<%= new_repo_url %>), browse
-existing repos (<%= root_url %>), or you can even subscribe to code triage
-itself (<%=  File.join(root_url, "/codetriage/codetriage") %>).
-The important part is that you pick something to triage, or you will get this
-same email next week, maybe with different repos.
+If you don't like any of these options, remember that they're selected based on your language preferences
+(click here to change them: <%= user_url(@user) %>).
+Not what you're looking for? Browse existing repos (<%= root_url %>), or you can even subscribe to code triage itself
+(<%=  File.join(root_url, "/codetriage/codetriage") %>). The important part is that you pick something to triage,
+or you will get this same email next week, maybe with different repos.
 
 To unsubscribe entirely delete your account (<%= user_url(@user) %>) but don't
 do that, subscribe to an issue above and do some good in the world. I believe
