--- a/app/views/subscribers/_avatars.html.slim
+++ b/app/views/subscribers/_avatars.html.slim
@@ -1,4 +1,4 @@
 - subscribers.each do |subscriber|
   li.user
-    => link_to subscriber.github_url, title: "@#{subscriber.github}" do
+    => link_to subscriber.github_url, target: "_blank", title: "@#{subscriber.github}" do
       = image_tag subscriber.avatar_url, alt: subscriber.github, class: 'avatar-image'
