--- a/app/views/repos/_issues.html.slim
+++ b/app/views/repos/_issues.html.slim
@@ -9,7 +9,7 @@
     - @issues.each do |issue|
       li.slats-item
         span.half-opacity.warning-svg.issue-icon
-        = link_to issue.title, issue.html_url
+        = link_to issue.title, issue.html_url, target: "_blank"
   .pagination
     a.previous_page href=repo_path(full_name: @repo.full_name, issues_before: @issues.first.id)+"#help-out"
       | ← Previous
