--- a/app/views/application/_footer.html.slim
+++ b/app/views/application/_footer.html.slim
@@ -24,3 +24,6 @@ footer.application-footer
   p
     | &copy; CodeTriage &nbsp;
     = Time.now.year
+
+  hr
+  = debug(params) if Rails.env.development?
