--- a/app/assets/stylesheets/components/_types-filter.scss
+++ b/app/assets/stylesheets/components/_types-filter.scss
@@ -77,3 +77,11 @@
     width: 150px;
   }
 }
+
+.search-field {
+  color: white;
+  width: 50%;
+  float: right;
+  padding-left: $base-spacing;
+  padding-top: $small-spacing;
+}
