Display a single save button for docs triage
Current UX for tiage settings is confusing. Eventhough both buttons work
in the same way a new user may think that he has to change read/write
settings one by one. This PR leaves a single button and slightly changes
the arrangement of items on the page.

--- a/app/assets/stylesheets/components/_repo.scss
+++ b/app/assets/stylesheets/components/_repo.scss
@@ -56,6 +56,11 @@
     display: inline-block;
   }
 
+  .read {
+    float: left;
+    margin-right: 20px;
+  }
+
   .save-amount {
     background: none;
     color: $action-color;
