Inserted data on view

--- a/app/assets/stylesheets/components/_repo-list.scss
+++ b/app/assets/stylesheets/components/_repo-list.scss
@@ -122,3 +122,8 @@
   @include position(absolute, null null $base-spacing null);
   color: $lightest-font-color;
 }
+
+.repo-item-code-helpers {
+  color: $lightest-font-color;
+  font-size: 12px;
+}
