--- a/app/views/university/picking_a_repo.md.erb
+++ b/app/views/university/picking_a_repo.md.erb
@@ -27,7 +27,7 @@ The best people to write features and documentation for a piece of software are 
 
 ## How many Repos should I subscribe to?
 
-When you're getting started contributing to open source, many developers have a goal. For example, they want a commit in a large library or framework. For instance, many Ruby developers want to contribute to [rails/rails](). If your open-source goal includes a specific repo, then definitely subscribe to that one right away.
+When you're getting started contributing to open source, many developers have a goal. For example, they want a commit in a large library or framework. For instance, many Ruby developers want to contribute to [rails/rails](https://github.com/rails/rails). If your open-source goal includes a specific repo, then definitely subscribe to that one right away.
 
 In addition to a famous repository, we also suggest that you subscribe to a smaller repo. Why? One person can make a significant impact on a smaller project. Also, smaller projects are generally easier to fit into your brain. You'll pick up different complementary skillsets when you work with projects of various sizes.
 
