--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -12,7 +12,7 @@
 //
 //= require jquery
 //= require jquery_ujs
-//= require local-time
+//= require local-time.es2017-umd
 //= require bootstrap.min
 //= require bootstrap_custom
 //= require coffee_script_utilities
